--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
 
 #公共配置与profiles选择无关
 mybatis:
-  typeAliasesPackage: top.warmj.entity
+  typeAliasesPackage: top.warmj.model.entity
   mapperLocations: classpath:mapper/*.xml
 ---
 
