--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,3 +38,10 @@ spring:
     password: root
     driver-class-name: com.mysql.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
+
+  servlet:
+    multipart:
+      # 上传一个文件最大值,默认1Mb
+      max-file-size: 50MB
+      # 上传多个文件最大值,50Mb,默认10Mb
+      max-request-size: 500MB
