集合Shiro，增加登录、退出功能

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
             <version>1.1.0</version>
         </dependency>
 
+        <!--Shiro-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring-boot-web-starter</artifactId>
+            <version>1.4.1</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
