--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,19 @@ target/classes/top/warmj/service/TagService.class
 target/classes/top/warmj/service/UserService.class
 target/classes/top/warmj/util/FileBoxUtils.class
 target/classes/top/warmj/util/ZipUtils.class
+.idea/artifacts/document_retrieval_system_war.xml
+.idea/artifacts/document_retrieval_system_war_exploded.xml
+.idea/dataSources/69b91dc6-7010-4317-a791-6d5bd31b923b.xml
+.idea/workspace.xml
+target/classes/application.properties
+target/classes/application.yml
+target/classes/mapper/FileMapper.xml
+target/classes/top/warmj/controller/FileController.class
+target/classes/top/warmj/controller/TestBoot.class
+target/classes/top/warmj/dao/FileDao.class
+target/classes/top/warmj/pojo/File.class
+target/classes/top/warmj/pojo/FileBox.class
+target/classes/top/warmj/pojo/Relation.class
+target/classes/top/warmj/pojo/Tag.class
+target/classes/top/warmj/service/FileService.class
+target/classes/top/warmj/service/impl/FileServiceImpl.class
