--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
-/target/
-Document_Retrieval_System.iml
-/.idea/
+target/
+.classpath
+.project
+.settings/
+.springBeans
+.metadata/
+*.ipr
+*.iws
+*.iml
+.idea/
+.idea
+../.idea/
+*.swp
+*.swo
+*.swn
+*.DS_Store
+logs
